Mon Jun 25 12:41:30 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/transform.[ch] libxslt/xslt.c libxslt/xsltInternals.h:
	  added a new interface xsltRunStylesheet() for a more flexible
	  handling of the output and trying to adhere to xsl:document
	  filename generation semantic if one knows the URL of the output,
	  also add IObuf capacity and SAX for output but is currently not
	  implemented.
	* libxslt/xsltproc.c: added a -o or --output filename argument
	  to test xsltRunStylesheet() or provide a base when generating
	  multiple outputs
	* tests/docbook/Makefile.am tests/docbook/result/xtchunk/html/*:
	  updated tests to add DocBook xt:document based chunking
	* tests/multiple/Makefile.am: cleaned up the makefile a bit
	* tests/multiple/out/*.html: the new xt:document now generate
	  the DOCTYPE if available as is the case for HTML

Mon Jun 25 08:45:00 HKT 2001 William Brack <wbrack@mmm.com.hk>

	* Removed some redundant code in xsltDefaultProcessOneNode
	  and revised the default processing of an attribute node

Sun Jun 24 14:40:00 HKT 2001 William Brack <wbrack@mmm.com.hk>

	* Enhanced ApplyTemplates and ForEach to allow multiple
	  documents within a nodelist.
	* Repaired small bug in xsltDocument function which caused
	  a crash if invalid second argument was provided.

Sat Jun 23 15:44:00 MDT 2001 John Fleck <jfleck@inkstain.net>

	* doc/tutorial/libxslttutorial.xml, libxslttutorial.html
	  updating tutorial with explanation of xsltSave vs. xmlSave
	  functions 

Sat Jun 23 19:04:27 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* test/docbook: updated to docbook-xsl-1.4, regenerated results

Sat Jun 23 15:32:25 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* Makefile.am libxslt/Makefile.am libxslt/numbers.c 
	  libxslt/win32config.h libxslt/xsltconfig.h.in libxslt/xsltproc.c:
	  Patches for Windows mostly contributed by Yon Derek
	* win32/libxslt/libxslt.def win32/libxslt/libxslt.dsw